modules/acl/main.tf
resource "aws_security_group" "tzg_web_acl" {
  name        = "tzg_web"
  description = "TZG Web Network ACL"
  vpc_id      = "${var.vpc_id}"

  # allow SSH/HTTP/HTTPS inbound (from internet)
  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "443"
    to_port     = "443"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow any outbound
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "tzg_db_acl" {
  name        = "tzg_db"
  description = "TZG DB Network ACL"
  vpc_id      = "${var.vpc_id}"

  # allow SSH inbound (from internet)
  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow MySQL access from VPC
  ingress {
    from_port   = "3306"
    to_port     = "3306"
    protocol    = "tcp"
    cidr_blocks = ["10.2.2.0/24"]
  }

  # allow any outbound
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
